[tool.poetry]
name = "udns"
version = "0.1.0"
description = "μDNS is oversimpistic dns server with direct answers from Redis"
authors = ["Grigory Bakunov <thebobuk@ya.ru>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
uvloop = {version = "^0.14.0", optional = true}

[tool.poetry.dev-dependencies]
mypy = "^0.800"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
